src/scripts/components/_ui/toaster/toaster.scss
/**
 * Kodo Kojo - Software factory done right
 * Copyright © 2016 Kodo Kojo (infos@kodokojo.io)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program. If not, see <http://www.gnu.org/licenses/>.
 */

@import '~react-toolbox/components/snackbar/theme';
@import '../../../../styles/meta';

.snackbar {
  background-color: $color-primary-1;
  transition: all $animation-duration $animation-curve-default $animation-duration;
  button {
    min-width: inherit;
    margin-left: $spacing-smallest !important;
  }
}

.message-content {
  display: flex;
  flex: 1 1 auto;
  flex-flow: row nowrap;
}

.message-icon {
  display: flex;
  font-size: $font-size-large !important;
  margin-right: $spacing-atomic;
  align-items: baseline !important;
}

.message-text {
  flex: 1 1 100%;
  display: flex;
  font-size: $font-size-default;

}

